Creating scripts is now optionsl Makes app DPI aware

--- a/CSV2SQL/App.config
+++ b/CSV2SQL/App.config
@@ -17,6 +17,11 @@ import "Collections"
 
 {
 	record = Record("##")
+	
+	while select * from record
+	{
+		print(record)
+	}
 }</value>
             </setting>
         </CSV2SQL.Properties.Settings>
