Fix IDE comment regex Can execute with F5

--- a/CSV2SQL/Properties/Settings.settings
+++ b/CSV2SQL/Properties/Settings.settings
@@ -1,20 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CSV2SQL.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
   <Profiles />
-  <Settings>
-    <Setting Name="SourceCode" Type="System.String" Scope="User">
-      <Value Profile="(Default)">import "Core"
-import "Sql"
-import "Collections"
-
-{
-	record = Record("##")
-	
-	while select * from record
-	{
-		print(record)
-	}
-}</Value>
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
